--- a/IdSvrHost.MongoDB/project.json
+++ b/IdSvrHost.MongoDB/project.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "IdentityServer4": "1.0.0-beta1-update1"
+    "IdentityServer4": "1.0.0-beta1-update1",
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final"
   },
 
   "commands": {
@@ -19,8 +20,7 @@
       "dependencies": {
         "Core.MongoDB": "1.0.0-beta1"
       }
-    },
-    "dnxcore50": { }
+    }
   },
 
   "exclude": [
